# deepsphere-pytorch

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  contributing.md  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py
deepsphere/: __init__.py
deepsphere/data/: transforms.py
deepsphere/data/datasets/: dataset.py
deepsphere/data/transforms/: transforms.py
deepsphere/layers/: chebyshev.py
deepsphere/layers/samplings/: __init__.py  equiangular_pool_unpool.py  healpix_pool_unpool.py  icosahedron_pool_unpool.py
deepsphere/models/spherical_unet/: decoder.py  encoder.py  unet_model.py  utils.py
deepsphere/tests/: __init__.py  test_foo.py
deepsphere/utils/: device_init.py  initialization.py  laplacian_funcs.py  parser.py  samplings.py  stats_extractor.py
docs/source/: conf.py  deepsphere.data.datasets.rst  deepsphere.data.rst  deepsphere.data.transforms.rst  deepsphere.layers.rst  deepsphere.layers.samplings.rst  deepsphere.models.rst  deepsphere.models.spherical_unet.rst  deepsphere.rst  deepsphere.tests.rst  deepsphere.utils.rst  index.rst  modules.rst  scripts.rst  scripts.temporality.rst
notebooks/: demo_visualizations.ipynb  interactive_visualization.ipynb
scripts/: config.example.yml  means.npy  run_ar_tc.py  run_ar_tc_ignite.py  stds.npy
scripts/temporality/: config.yml  run_ar_tc.py
