[tool.black]
line-length = 150
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 150
known_third_party = ['sklearn', 'ignite', 'pygsp']

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    "setuptools >= 40.0.4",
    "setuptools_scm >= 2.0.0, <4",
    "wheel >= 0.29.0",
]

